# sprite-player

./: .gitignore  Makefile  autogen.sh  configure.ac  sprite-player.c
src/: Makefile.am  borders.c  borders.h  edge-effect.c  effect.h  effects.c  effects.h  no-effect.c  sprite-effect.c  sprite-player.c  squares-effect.c  stars-effect.c  wavey-effect.c
